OSP-RTMP: Changes to Support allowRestream setting in OSP-Core
OSP-RTMP: Fix for RTMP/Edge handling when Adaptive Streams are Enabled - #459
OSP-RTMP: Moves all Live Stream Playback to use HLS Encryption and Moves Channel Protection to use Key Authorization Validation
OSP-Proxy: Updates to use HLS Key Encryption via Proxy

0.8.17
==============================================
OSP-Core: Fixes clipplayer.html caching issues
OSP-Core: Fixes Incorrect Live Viewer Counter on Stream Cards per Issue #433
OSP-Core: Enhanced Logging Structure within OSP-Core, adding a new config.py variable (log_level) to configure the Log Level returned to /opt/osp/logs/osp-error.log

0.8.16
==============================================
OSP-Core: Added /Search API Calls for Videos, Clips, Users, Streams, Channels and Topics - Returns ID value, Name, UUID (if available), and any other information for future search bar
OSP-Core: Fixed an issue displaying Clips on Channels with Subscriptions due to DB Caching
OSP-Core: Fixed and issue where validation of domain names was causing 405 error on FirstRun Setup

0.8.15
==============================================
OSP-Core: Added per channel option to allow unauthenticated users to provide nickname or use generated nickname
OSP-Core: Fixed a security issue where any authenticated user could alter any channel's chat settings (Room name, Description, Moderation Status)
OSP-Core: Fixed a security issue where an unauthorized user with streamer roles could add stickers to any channel

0.8.14
==============================================
OSP-Core: Added the ability for unauthenticated visors to provide a nickname in chat per issue #241
OSP-Core: Upgraded VideoJS to 7.14.3
OSP-Core: Fixed an issue where posting a comment generated a 500 Error
OSP-Core: Fixed an issue where Video Comments were not showing

0.8.13
==============================================
OSP-Core: Added option for Metrics & Logging via Sentry.IO (Disabled by Default)